--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,32 +2,19 @@
 <html>
 <head>
 
-    <title>that's my spot.com</title>
-
-
-
-
+    <title>PPS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
     <link href="../public/stylesheets/style3.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="../public/stylesheets/bootstrap.min.css">
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-
     <link rel="stylesheet" type="text/css" href="css/animate.css"/>
-
-
-
+    <link rel="icon" type="image/png" href="../public/imagenes/Logo.png">
     <script src="js/jquery.min.js"></script>
-
     <script type="text/javascript" src="js/move-top.js">
     </script>
-
-
     <script src="js/bootstrap.min.js"></script>
-
-
     <script type="text/javascript" src="js/wow.js"></script>
     <script src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
@@ -61,31 +48,30 @@
 
 <!--  Header Section  -->
 <header>
+    <center>
     <div class="container">
         <div class="logo pull-left animated wow fadeInLeft">
-            <img src="images/logo.jpg" height="80px"  width="65px" alt="" title="" >
-            <p style="font-style:italic;color:white;font-size:12pt;"                 class="animated wow fadeInLeft" data-wow-delay=".2s">That's my spot</p>
-
-
-
+            <img src="../public/imagenes/main.png" height="115px"  width="115px" alt="" title="" >
         </div>
-
-
-        <nav class="pull-right">
+        <div>
+            &nbsp;
+            <b><p style="font-style:normal;color:white;font-size:25pt;font-family: 'Myanmar Text'" class="animated wow fadeInLeft" data-wow-delay=".2s">
+                Paraguay Parking System</p></b>
+        </div>
+        <nav>
             <ul class="list-unstyled">
-
-
-
-                <li class="animated wow fadeInLeft" data-wow-delay="0s"><a href="Sign_in_customer.html">Sign In</a></li>
-
-                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#gallery">Gallery</a></li>
-                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#contact">Contact</a></li>
+                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#gallery">¿Quienes Somos?</a></li>
+                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#contact">La empresa</a></li>
+                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#gallery">Servicios</a></li>
+                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#contact">Contactos</a></li>
+                <li class="animated wow fadeInLeft" data-wow-delay=".2s"><a href="#gallery">Galeria</a></li>
             </ul>
         </nav>
 
-
         <span class="burger_icon">menu</span>
+
     </div>
+    </center>
 </header>
 <!--  End Header Section  -->
 
