--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,25 +11,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="imagenes/Logo.png" type="image/png">
+    <link rel="shortcut icon" href="../public/imagenes/Logo.png" type="image/png">
         
     <!--====== Magnific Popup CSS ======-->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="../public/assets/css/magnific-popup.css">
         
     <!--====== Slick CSS ======-->
-    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="../public/assets/css/slick.css">
         
     <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="assets/css/LineIcons.css">
+    <link rel="stylesheet" href="../public/assets/css/LineIcons.css">
         
     <!--====== Bootstrap CSS ======-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/assets/css/bootstrap.min.css">
     
     <!--====== Default CSS ======-->
-    <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="../public/assets/css/default.css">
     
     <!--====== Style CSS ======-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../public/assets/css/style.css">
     
 </head>
 
@@ -68,7 +68,7 @@
                     <nav class="navbar navbar-expand-lg">
                        
                         <a class="navbar-brand" href="#">
-                            <img src="imagenes/Logo.png" alt="Logo" width="250px" height="250px">
+                            <img src="../public/imagenes/Logo.png" alt="Logo" width="250px" height="250px">
                         </a>
                         
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo" aria-controls="navbarTwo" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +123,7 @@
                     </div> <!-- container -->
                     <div class="slider-image-box d-none d-lg-flex align-items-end">
                         <div class="slider-image">
-                            <img src="imagenes/main.png" alt="Hero">
+                            <img src="../public/imagenes/main.png" alt="Hero">
                         </div> <!-- slider-imgae -->
                     </div> <!-- slider-imgae box -->
                 </div> <!-- carousel-item -->
@@ -152,7 +152,7 @@
                             <h4 class="features-title"><a href="#">Graphics Design</a></h4>
                             <div class="features-icon">
                                 <i class="lni lni-brush"></i>
-                                <img class="shape" src="assets/images/f-shape-1.svg" alt="Shape">
+                                <img class="shape" src="../public/assets/images/f-shape-1.svg" alt="Shape">
                             </div>
                         </div>
                         <div class="features-content">
@@ -167,7 +167,7 @@
                             <h4 class="features-title"><a href="#">Website Design</a></h4>
                             <div class="features-icon">
                                 <i class="lni lni-layout"></i>
-                                <img class="shape" src="assets/images/f-shape-1.svg" alt="Shape">
+                                <img class="shape" src="../public/assets/images/f-shape-1.svg" alt="Shape">
                             </div>
                         </div>
                         <div class="features-content">
@@ -182,7 +182,7 @@
                             <h4 class="features-title"><a href="#">Digital Marketing</a></h4>
                             <div class="features-icon">
                                 <i class="lni lni-bolt"></i>
-                                <img class="shape" src="assets/images/f-shape-1.svg" alt="Shape">
+                                <img class="shape" src="../public/assets/images/f-shape-1.svg" alt="Shape">
                             </div>
                         </div>
                         <div class="features-content">
@@ -213,7 +213,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="pricing-style mt-30">
                         <div class="pricing-icon text-center">
-                            <img src="assets/images/basic.svg" alt="">
+                            <img src="../public/assets/images/basic.svg" alt="">
                         </div>
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Basic</h5>
@@ -234,7 +234,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="pricing-style mt-30">
                         <div class="pricing-icon text-center">
-                            <img src="assets/images/pro.svg" alt="">
+                            <img src="../public/assets/images/pro.svg" alt="">
                         </div>
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Pro</h5>
@@ -255,7 +255,7 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="pricing-style mt-30">
                         <div class="pricing-icon text-center">
-                            <img src="assets/images/enterprise.svg" alt="">
+                            <img src="../public/assets/images/enterprise.svg" alt="">
                         </div>
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Enterprise</h5>
@@ -348,7 +348,7 @@
                 </div>
                 <div class="col-lg-7">
                     <div class="about-image mt-50">
-                        <img src="assets/images/about.jpg" alt="about">
+                        <img src="../public/assets/images/about.jpg" alt="about">
                     </div> <!-- faq image -->
                 </div>
             </div> <!-- row -->
@@ -388,7 +388,7 @@
                                 <div class="testimonial-author d-sm-flex justify-content-between">
                                     <div class="author-info d-flex align-items-center">
                                         <div class="author-image">
-                                            <img src="assets/images/author-1.jpg" alt="author">
+                                            <img src="../public/assets/images/author-1.jpg" alt="author">
                                         </div>
                                         <div class="author-name media-body">
                                             <h5 class="name">Mr. Jems Bond</h5>
@@ -414,7 +414,7 @@
                                 <div class="testimonial-author d-sm-flex justify-content-between">
                                     <div class="author-info d-flex align-items-center">
                                         <div class="author-image">
-                                                <img src="assets/images/author-2.jpg" alt="author">
+                                                <img src="../public/assets/images/author-2.jpg" alt="author">
                                         </div>
                                         <div class="author-name media-body">
                                             <h5 class="name">Mr. Jems Bond</h5>
@@ -440,7 +440,7 @@
                                 <div class="testimonial-author d-sm-flex justify-content-between">
                                     <div class="author-info d-flex align-items-center">
                                         <div class="author-image">
-                                                <img src="assets/images/author-3.jpg" alt="author">
+                                                <img src="../public/assets/images/author-3.jpg" alt="author">
                                         </div>
                                         <div class="author-name media-body">
                                             <h5 class="name">Mr. Jems Bond</h5>
@@ -484,7 +484,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                         <div class="team-image">
-                            <img src="assets/images/team-1.jpg" alt="Team">
+                            <img src="../public/assets/images/team-1.jpg" alt="Team">
                         </div>
                         <div class="team-content">
                             <div class="team-social">
@@ -503,7 +503,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                         <div class="team-image">
-                            <img src="assets/images/team-2.jpg" alt="Team">
+                            <img src="../public/assets/images/team-2.jpg" alt="Team">
                         </div>
                         <div class="team-content">
                             <div class="team-social">
@@ -522,7 +522,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                         <div class="team-image">
-                            <img src="assets/images/team-3.jpg" alt="Team">
+                            <img src="../public/assets/images/team-3.jpg" alt="Team">
                         </div>
                         <div class="team-content">
                             <div class="team-social">
@@ -604,7 +604,7 @@
                     <div class="contact-wrapper form-style-two pt-115">
                         <h4 class="contact-title pb-10"><i class="lni lni-envelope"></i> Leave <span>A Message.</span></h4>
                         
-                        <form id="contact-form" action="assets/contact.php" method="post">
+                        <form id="contact-form" action="../public/assets/contact.php" method="post">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-input mt-25">
@@ -656,7 +656,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="footer-logo text-center">
-                        <a class="mt-30" href="index.html"><img src="imagenes/Logo.png" alt="Logo"></a>
+                        <a class="mt-30" href="index.html"><img src="../public/imagenes/Logo.png" alt="Logo"></a>
                     </div> <!-- footer logo -->
                     <ul class="social text-center mt-60">
                         <li><a href="https://facebook.com/uideckHQ"><i class="lni lni-facebook-filled"></i></a></li>
@@ -704,32 +704,32 @@
 
 
     <!--====== Jquery js ======-->
-    <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/vendor/modernizr-3.7.1.min.js"></script>
+    <script src="../public/assets/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="../public/assets/js/vendor/modernizr-3.7.1.min.js"></script>
     
     <!--====== Bootstrap js ======-->
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="../public/assets/js/popper.min.js"></script>
+    <script src="../public/assets/js/bootstrap.min.js"></script>
     
     <!--====== Slick js ======-->
-    <script src="assets/js/slick.min.js"></script>
+    <script src="../public/assets/js/slick.min.js"></script>
     
     <!--====== Magnific Popup js ======-->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="../public/assets/js/jquery.magnific-popup.min.js"></script>
     
     <!--====== Ajax Contact js ======-->
-    <script src="assets/js/ajax-contact.js"></script>
+    <script src="../public/assets/js/ajax-contact.js"></script>
     
     <!--====== Isotope js ======-->
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
+    <script src="../public/assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="../public/assets/js/isotope.pkgd.min.js"></script>
     
     <!--====== Scrolling Nav js ======-->
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/scrolling-nav.js"></script>
+    <script src="../public/assets/js/jquery.easing.min.js"></script>
+    <script src="../public/assets/js/scrolling-nav.js"></script>
     
     <!--====== Main js ======-->
-    <script src="assets/js/main.js"></script>
+    <script src="../public/assets/js/main.js"></script>
     
 </body>
 
